Grease pencil attributes added to regular material #63707

Closed
opened 2019-04-18 18:14:42 +02:00 by stephen leger · 26 comments
Member

System Information
Operating system: linux Mint
Graphics card: Nvidia 1070

Blender Version
Broken: 2.8 4439e5d0ba
Worked: (optional)

Short description of error
Grease pecil attributes on regular materials on file load.

Exact steps for others to reproduce the error
Getting grease pencil attributes added on some regular materials on file load.
Allready have such error reported ~10 days ago.

gp_material_mess.blend

**System Information** Operating system: linux Mint Graphics card: Nvidia 1070 **Blender Version** Broken: 2.8 4439e5d0ba3f Worked: (optional) **Short description of error** Grease pecil attributes on regular materials on file load. **Exact steps for others to reproduce the error** Getting grease pencil attributes added on some regular materials on file load. Allready have such error reported ~10 days ago. [gp_material_mess.blend](https://archive.blender.org/developer/F6957343/gp_material_mess.blend)
Author
Member

Added subscriber: @StephenLeger

Added subscriber: @StephenLeger

#71533 was marked as duplicate of this issue

#71533 was marked as duplicate of this issue

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

If you are talking about the Annotation layers showing up, then that's intended behaviour .
(see #63455 (Legacy GPencil settings in Annotations)).
Is that what you mean?

If you are talking about the Annotation layers showing up, then that's [intended behaviour ](https://developer.blender.org/rB99f1e3d57fa1ee1f4400c299f1247ac5c614b6f0#inline-4678). (see #63455 (Legacy GPencil settings in Annotations)). Is that what you mean?
Author
Member

Nope, select the object and take a look at material,
you should see typical grease pencil attributes on it, stroke and so on, and i definitely not expect those params on regular material.

Nope, select the object and take a look at material, you should see typical grease pencil attributes on it, stroke and so on, and i definitely not expect those params on regular material.

Added subscriber: @antoniov

Added subscriber: @antoniov

Ah I see...
AttributeError: 'Mesh' object has no attribute 'use_stroke_edit_mode'

@StephenLeger Any Idea how to reproduce? (from scratch)

@antoniov Known issue?

Ah I see... `AttributeError: 'Mesh' object has no attribute 'use_stroke_edit_mode'` @StephenLeger Any Idea how to reproduce? (from scratch) @antoniov Known issue?

I cannot reproduce it. I have created a file in 2.79 and loaded and all is ok, then created a new file in 2.80, open it again and not problems.

When need a reproducible step by step guide to analyze this bug.

Are you using any add-on?

I cannot reproduce it. I have created a file in 2.79 and loaded and all is ok, then created a new file in 2.80, open it again and not problems. When need a reproducible step by step guide to analyze this bug. Are you using any add-on?
Author
Member

Don't know how to repro, it suddenly appear on a file after loading.
Looks like it's probably related to Annotation.

Had another user with same issue ~ 29.03.2019

Don't know how to repro, it suddenly appear on a file after loading. Looks like it's probably related to Annotation. Had another user with same issue ~ 29.03.2019

Maybe there was a name conflict when the materials for annotations was created... but not sure. We will wait until you are able to reproduce consistently to go deeper in the problem.

Maybe there was a name conflict when the materials for annotations was created... but not sure. We will wait until you are able to reproduce consistently to go deeper in the problem.
Author
Member

Archipack, is enabled,
but double checked material loading 29.03 and not it does check and when gp attr are found skip material and never apply it.
So i cant imagine it's related to this one.

Archipack, is enabled, but double checked material loading 29.03 and not it does check and when gp attr are found skip material and never apply it. So i cant imagine it's related to this one.

@StephenLeger Do you think we can close the task?

@StephenLeger Do you think we can close the task?
Author
Member

Root of this issue still not known, but it occurs. It's clearly related to use of annotations.
So maybe keep open with a lower priority in order to gather more information from other users.

At this time it is impossible to remove gp related parameters from materials, so current workaround is to re-create material and related nodes, but would have been lot easyer if we are able to simply remove gp attr.

Root of this issue still not known, but it occurs. It's clearly related to use of annotations. So maybe keep open with a lower priority in order to gather more information from other users. At this time it is impossible to remove gp related parameters from materials, so current workaround is to re-create material and related nodes, but would have been lot easyer if we are able to simply remove gp attr.

Ok, we will keep open waiting to get the exact steps to reproduce it.

Ok, we will keep open waiting to get the exact steps to reproduce it.
@StephenLeger See commit f8bed5ccdccd

Added subscriber: @viadvena

Added subscriber: @viadvena

Same trouble in #71533 in 2.81. Guys, it's really should be high priority. All workflow going down with this bug...

Same trouble in [#71533 ](https://developer.blender.org/T71533) in 2.81. Guys, it's really should be high priority. All workflow going down with this bug...
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Some more examples in #71533 (Object material turns to Grease Pencil materials - Bug ), but really seems to be the same roots...
Will raise prio, trying to find reproduction steps...

Some more examples in #71533 (Object material turns to Grease Pencil materials - Bug ), but really seems to be the same roots... Will raise prio, trying to find reproduction steps...

Added subscriber: @Yianni

Added subscriber: @Yianni

I'm getting this too. Only really got it since I started switching between 2.81 and 2.82. Though I'm not certain that's what triggered it.

I'm getting this too. Only really got it since I started switching between 2.81 and 2.82. Though I'm not certain that's what triggered it.

I have committed a patch to separate GPencil objects and Annotations. Not sure if this fix this bug because we were not able to reproduce, but maybe this solves the issue.

Waiting to find a way to reproduce it if the bug still exists.

I have committed a patch to separate GPencil objects and Annotations. Not sure if this fix this bug because we were not able to reproduce, but maybe this solves the issue. Waiting to find a way to reproduce it if the bug still exists.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Richard Antalik self-assigned this 2020-01-21 00:46:19 +01:00

Will close this for now, if somebody will come across this issue with new builds, please let us know.

Will close this for now, if somebody will come across this issue with new builds, please let us know.

Added subscriber: @marc_von_step

Added subscriber: @marc_von_step
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63707
No description provided.